--- a/it_modernization/data/events.yaml
+++ b/it_modernization/data/events.yaml
@@ -349,6 +349,7 @@
   type: onboarded
   onboard_type: detailed
   detailed_from: DOGE
+  detail_id: 20250212-doge-education-all
   event: Adam Ramada is detailed from the USDS to the Department of Education. He says there is one other USDS staffer with him, two other detailees and two Education staffers.
   named:
   - Adam Ramada
@@ -687,6 +688,7 @@
 - date: 2025-02-03
   type: onboarded
   detailed_from: OPM
+  detail_id: 20250212-opm-education-gse
   event: Akash Bobba is detailed from OPM to the Department of Education
   source: https://storage.courtlistener.com/recap/gov.uscourts.dcd.277216/gov.uscourts.dcd.277216.32.1.pdf
   named:
@@ -696,6 +698,7 @@
 - date: 2025-02-03
   type: onboarded
   detailed_from: GSA
+  detail_id: 20250212-gsa-education-sge
   event: Ethan Shaotran is detailed from GSA to the Department of Education
   source: https://storage.courtlistener.com/recap/gov.uscourts.dcd.277216/gov.uscourts.dcd.277216.32.1.pdf
   named:
@@ -860,6 +863,7 @@
 - date: 2025-02-05
   type: onboarded
   detailed_from: DOGE
+  detail_id: 20250212-doge-education-all
   event: Alexandra Beynon is detailed from DOGE to the Department of Education
   source: https://storage.courtlistener.com/recap/gov.uscourts.dcd.277216/gov.uscourts.dcd.277216.32.1.pdf
   named:
@@ -1306,6 +1310,7 @@
   type: onboarded
   onboard_type: detailed
   detailed_from: OPM
+  detail_id: 20250212-opm-education-gse
   comment: He is identified in another exhibit in the source
   named:
   - Akash Bobba
@@ -1642,6 +1647,7 @@
   type: onboarded
   onboard_type: detailed
   detailed_from: DOL
+  detail_id: 20250218-dol-ssa-employee-3
   event: According to a sworn declaration by a Deputy Commissioner at SSA, "we began onboarding and training Employee 3, a Schedule C Policy Advisor, detailed from the Department of Labor to SSA" with it finalized on February 22. "His duties currently relate to improper payments and SSA's Death Master File."
   source: https://storage.courtlistener.com/recap/gov.uscourts.dcd.277150/gov.uscourts.dcd.277150.53.1.pdf
   agency: SSA
@@ -1658,6 +1664,7 @@
   type: onboarded
   onboard_type: detailed
   detailed_from: NASA
+  detail_id: 20250306-nasa-ssa-employee-2
   event: According to a sworn declaration, SSA "began onboarding and training Employee 2, Senior Advisor (Program Specialist AD-0301-00). He is in the process of being detailed from National Aeronautics and Space Administration (NASA) to SSA."
   comment: This is likely Scott Coulter based on DOGE staff who have been linked to both NASA and SSA by other reports
   named:
@@ -1731,6 +1738,7 @@
   type: onboarded
   onboard_type: detailed
   detailed_from: GSA
+  detail_id: 20250218-gsa-ssa-employee-10
   event: According to a sworn declaration, "Employee 10, a software engineer, was detailed from the Office of the Administrator at the General Services Administration to SSA"
   comment: I am guessing this is Ethan Shaotran based on coming from GSA and earlier identification at the agency
   named:
@@ -1834,6 +1842,7 @@
 - date: 2025-02-20
   type: onboarded
   detailed_from: DOGE
+  detail_id: 20250212-doge-education-all
   event: Jordan Wick is detailed from DOGE to the Department of Education
   source: https://storage.courtlistener.com/recap/gov.uscourts.dcd.277216/gov.uscourts.dcd.277216.32.1.pdf
   named:
@@ -1848,6 +1857,18 @@
   named:
   - Edward Coristine
   agency: Education
+
+- date: 2025-02-20
+  type: official
+  event: Amy Gleason and an SSA representative sign a modification to an existing agreement between USDS and SSA for 15FTEs at $4.5million to change it to be about "increasing efficiency and the modernization of SSA IT infrastructure and systems, and detecting waste, fraud, and abuse."
+  comment: It's unclear how much had already been spent on the prior agreement. Amy Gleason makes an appearance though!
+  source: https://storage.courtlistener.com/recap/gov.uscourts.mdd.577321/gov.uscourts.mdd.577321.121.3.pdf
+  detail_id: 20250220-usds-ssa-modification
+  named:
+  - Amy Gleason
+  agency:
+  - DOGE
+  - SSA
 
 - date: 2025-02-21
   type: official
@@ -2192,6 +2213,7 @@
   type: onboarded
   onboard_type: detailed
   detailed_from: OPM
+  detail_id: 20250226-opm-ssa-employee-8
   event: According to a sworn declaration, "employee 8, an engineer, was detailed from Office of Personnel Management to SSA. His duties currently relate to improper payments and death data."
   source: https://storage.courtlistener.com/recap/gov.uscourts.dcd.277150/gov.uscourts.dcd.277150.53.1.pdf
   agency: SSA
@@ -2592,6 +2614,7 @@
   type: onboarded
   onboard_type: detailed
   detailed_from: DOL
+  detail_id: 20250317-dol-ssa-employee-7
   event: According to a sworn declaration, "the agency began onboarding Employee 7, as a detailee from Department of Labor (DOL) to SSA."
   source: https://storage.courtlistener.com/recap/gov.uscourts.dcd.277150/gov.uscourts.dcd.277150.53.1.pdf
   agency: SSA
