--- a/it_modernization/raw_data/agencies.yaml
+++ b/it_modernization/raw_data/agencies.yaml
@@ -86,6 +86,9 @@
 - name: Federal Communications Commission
   id: FCC
 
+- name: Federal Deposit Insurance Commission
+  id: FDIC
+
 - name: Federal Trade Commission
   id: FTC
 
